syntax = "proto3";

package user;

service UserService {  
    rpc Login(LoginUserRequest) returns (LoginUserResponse);
    rpc Register(RegisterUserRequest) returns (RegisterUserResponse);
}

message Membership {
  string type = 1;
  string startDate = 2;
  double amount = 3;
}

message User {
  string _id = 1;
  string name = 2;
  string email = 3;
  string profilePicture = 4;
  repeated string followers = 5;
  repeated string followings = 6;
  repeated string likedPost = 7;
  bool isAdmin = 8;
  bool isBlocked = 9;
  bool isPrivate = 10;
  repeated string savedPosts = 11;
  bool isMember = 12;
  string paymentStatus = 13;
  string createdAt = 14;
  string bio = 15;
  string location = 16;
  Membership membership = 17;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  bool success = 1;
  string message = 2;
  User user_data = 3;  
}


message RegisterUserRequest {
  string name=1;
  string email=2;
  string phone=3;
  string password=4;
}

message UserRegister {
  string name=1;
  string email=2;
  string number=3;
  string password=4;
}

message RegisterUserResponse {
  bool success=1;
  string message=2;
  string otp=3;
  UserRegister user_data=4;
}
